lp578/feat/profiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       REACT_APP_IPFS_HOST: ${STOW_IPFS_HOST}
       REACT_APP_IPFS_PORT: ${STOW_IPFS_PORT}
       REACT_APP_IPFS_PROTOCOL: ${STOW_IPFS_PROTOCOL}
+      REACT_APP_SERVER_URL: ${STOW_BACKEND_URL}
       NPM_TOKEN: ${NPM_TOKEN}
     ports:
      - "3000:3000"
