--- a/.env.ropsten
+++ b/.env.ropsten
@@ -1,10 +1,9 @@
-STOW_DB_USERNAME=linnia_user
-STOW_DB_NAME=linnia_db
+STOW_DB_USERNAME=stow_user
+STOW_DB_NAME=stow_db
 STOW_DB_PORT=5432
 STOW_DB_HOST=host.docker.internal
-STOW_HUB_ADDRESS=0x76305411d861ecc48153336be8b8c255e1aec823
 STOW_ETH_PROVIDER=wss://ropsten.infura.io/ws
-STOW_DDEX_HUB_ADDRESS=0x793cc07be39c1cb886ad2595a8c4efa41f23b694
+STOW_DDEX_HUB_ADDRESS=0xfa90daa7c312bca3f850eb648a6d37d17907adf5
 STOW_SERVER_URL=http://localhost:3000
 STOW_DDEX_SERVER_URL=http://localhost:3001
 STOW_IPFS_HOST=ipfs.infura.io
